Some changes including:
1. A default limit of 10 reviews per page with a max clamp at 100.
2. Added unit tests for verifying pagination functionality in both the DAL and GetAllReviewsRequestValidator.
3. Minor change in how the latest review is retrieved in ReviewDALImpl.
4. Made some minor adjustments to some variables regarding mutation prevention, removing the need for serialized names.